import { Generated } from "./Generated.js";
import { describe, expect, it } from "vitest";

describe("Generated", () => {
  it("should stage generated with uuid strategy", () => {
    class TestMsg {
      @Generated("uuid")
      id!: string;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    expect(metadata.generated).toMatchSnapshot();
  });

  it("should stage generated with string strategy and length", () => {
    class TestMsg {
      @Generated("string", { length: 12 })
      code!: string;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    expect(metadata.generated).toMatchSnapshot();
  });

  it("should stage generated with integer strategy and range", () => {
    class TestMsg {
      @Generated("integer", { min: 1, max: 1000 })
      sequence!: number;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    expect(metadata.generated).toMatchSnapshot();
  });

  it("should stage generated with date strategy", () => {
    class TestMsg {
      @Generated("date")
      createdAt!: Date;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    expect(metadata.generated).toMatchSnapshot();
  });

  it("should default to lindorm_id strategy with no arguments", () => {
    class TestMsg {
      @Generated()
      id!: string;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    const gen = metadata.generated[0];
    expect(gen.strategy).toBe("lindorm_id");
    expect(gen.generator).toBeNull();
  });

  it("should stage a lindorm_id namespace", () => {
    class TestMsg {
      @Generated("lindorm_id", { namespace: "user" })
      id!: string;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    const gen = metadata.generated[0];
    expect(gen.strategy).toBe("lindorm_id");
    expect(gen.namespace).toBe("user");
  });

  it("should stage a lindorm_id namespace with a custom length", () => {
    class TestMsg {
      @Generated("lindorm_id", { namespace: "u", length: 32 })
      id!: string;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    const gen = metadata.generated[0];
    expect(gen.namespace).toBe("u");
    expect(gen.length).toBe(32);
  });

  it("should default namespace to null", () => {
    class TestMsg {
      @Generated("lindorm_id")
      id!: string;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    expect(metadata.generated[0].namespace).toBeNull();
  });

  it("should stage a custom generator function with null strategy", () => {
    const fn = () => "x";

    class TestMsg {
      @Generated(fn)
      id!: string;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    const gen = metadata.generated[0];
    expect(gen.strategy).toBeNull();
    expect(gen.generator).toBe(fn);
  });

  it("should leave generator null for string strategies", () => {
    class TestMsg {
      @Generated("uuid")
      id!: string;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    expect(metadata.generated[0].generator).toBeNull();
  });

  it("should default options to null", () => {
    class TestMsg {
      @Generated("float")
      value!: number;
    }

    const metadata = (TestMsg as any)[Symbol.metadata];
    const gen = metadata.generated[0];
    expect(gen.length).toBeNull();
    expect(gen.max).toBeNull();
    expect(gen.min).toBeNull();
  });
});
