// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generated > should stage generated with date strategy 1`] = `
[
  {
    "generator": null,
    "key": "createdAt",
    "length": null,
    "max": null,
    "min": null,
    "namespace": null,
    "strategy": "date",
  },
]
`;

exports[`Generated > should stage generated with integer strategy and range 1`] = `
[
  {
    "generator": null,
    "key": "sequence",
    "length": null,
    "max": 1000,
    "min": 1,
    "namespace": null,
    "strategy": "integer",
  },
]
`;

exports[`Generated > should stage generated with string strategy and length 1`] = `
[
  {
    "generator": null,
    "key": "code",
    "length": 12,
    "max": null,
    "min": null,
    "namespace": null,
    "strategy": "string",
  },
]
`;

exports[`Generated > should stage generated with uuid strategy 1`] = `
[
  {
    "generator": null,
    "key": "id",
    "length": null,
    "max": null,
    "min": null,
    "namespace": null,
    "strategy": "uuid",
  },
]
`;
